fix positioning of popover on mobile devices

--- a/src/UI/FillColor/styles.css
+++ b/src/UI/FillColor/styles.css
@@ -12,11 +12,12 @@
   width: 40px;
   height: 40px;
   bottom: 100%;
-  left: 0;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   background: #ffffff;
+  border-top-right-radius: 4px;
   border-top-left-radius: 4px;
 }
 
