--- a/src/UI/StrokeColor/styles.css
+++ b/src/UI/StrokeColor/styles.css
@@ -13,11 +13,13 @@
   width: 40px;
   height: 40px;
   bottom: 100%;
-  left: 40px;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   background: #ffffff;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
 }
 
 .stroke-color__color-indicator {
